raise ordinals like "1st" via <sup>

--- a/Dracula.html
+++ b/Dracula.html
@@ -77,7 +77,7 @@
 <section id="chap01">
 <h2>Chapter 1</h2>
 <h3>Jonathan Harker’s Journal<br/>(<em>Kept in shorthand</em>)</h3>
-<p>3 May. Bistritz.—Left Munich at 8:35 P.M., on 1st May, arriving at
+<p>3 May. Bistritz.—Left Munich at 8:35 P.M., on 1<sup>st</sup> May, arriving at
 Vienna early next morning; should have arrived at 6:46, but train was
 an hour late. Buda-Pesth seems a wonderful place, from the glimpse
 which I got of it from the train and the little I could walk through
@@ -11666,7 +11666,7 @@ we allow for two days less for the ship’s voyage, owing to such
 weather influences as we know that the Count can bring to bear, and if
 we allow a whole day and night for any delays which may occur to us,
 then we have a margin of nearly two weeks.</p>
-<p>“Thus, in order to be quite safe, we must leave here on 17th at
+<p>“Thus, in order to be quite safe, we must leave here on 17<sup>th</sup> at
 latest. Then we shall at any rate be in Varna a day before the ship
 arrives, and able to make such preparations as may be necessary. Of
 course we shall all go armed, armed against evil things, spiritual as
@@ -11972,7 +11972,7 @@ coming relapse from her freedom of soul, did not seem so full of
 despair to any of us as we had dreaded.</p>
 <hr/>
 <h3>Jonathan Harker’s Journal</h3>
-<p>15 October, Varna.—We left Charing Cross on the morning of the 12th,
+<p>15 October, Varna.—We left Charing Cross on the morning of the 12<sup>th</sup>,
 got to Paris the same night, and took the places secured for us in the
 Orient Express. We traveled night and day, arriving here at about
 five o’clock. Lord Godalming went to the Consulate to see if any
@@ -12053,7 +12053,7 @@ but only the same story. “Not yet reported.” Mina’s morning and
 evening hypnotic answer is unvaried. Lapping waves, rushing water,
 and creaking masts.</p>
 <hr/>
-<h3>Telegram, October 24th Rufus Smith, Lloyd’s, London,
+<h3>Telegram, October 24<sup>th</sup> Rufus Smith, Lloyd’s, London,
 to Lord Godalming, Care of H. B. M. Vice Consul, Varna</h3>
 <p>“Czarina Catherine reported this morning from Dardanelles.”</p>
 <hr/>
@@ -12833,7 +12833,7 @@ own on the Thames, and another on the Norfolk Broads. Regarding our
 plans, we finally decided that Mina’s guess was correct, and that if
 any waterway was chosen for the Count’s escape back to his Castle, the
 Sereth and then the Bistritza at its junction, would be the one. We
-took it, that somewhere about the 47th degree, north latitude, would
+took it, that somewhere about the 47<sup>th</sup> degree, north latitude, would
 be the place chosen for crossing the country between the river and the
 Carpathians. We have no fear in running at good speed up the river at
 night. There is plenty of water, and the banks are wide enough apart
