--- a/Frankenstein.html
+++ b/Frankenstein.html
@@ -75,7 +75,7 @@
 <section id="letter1">
 <h2>Letter 1</h2>
 <p class="letter_header">
-St. Petersburgh, Dec. 11th, 17—<br/>
+St. Petersburgh, Dec. 11<sup>th</sup>, 17—<br/>
 To Mrs. Saville, England</p>
 <p class="noindent">You will rejoice to hear that no disaster has accompanied the
 commencement of an enterprise which you have regarded with such evil
@@ -185,7 +185,7 @@ R. Walton</p>
 <section id="letter2">
 <h2>Letter 2</h2>
 <p class="letter_header">
-Archangel, 28th March, 17—<br/>
+Archangel, 28<sup>th</sup> March, 17—<br/>
 To Mrs. Saville, England</p>
 <p class="noindent">How slowly the time passes here, encompassed as I am by frost and snow!
 Yet a second step is taken towards my enterprise. I have hired a
@@ -302,7 +302,7 @@ Robert Walton</p>
 <section id="letter3">
 <h2>Letter 3</h2>
 <p class="letter_header">
-July 7th, 17—<br/>
+July 7<sup>th</sup>, 17—<br/>
 To Mrs. Saville, England</p>
 <p class="noindent">
 My dear Sister,<br>
@@ -338,12 +338,12 @@ R.W.</p>
 <section id="letter4">
 <h2>Letter 4</h2>
 <p class="letter_header">
-August 5th, 17—<br/>
+August 5<sup>th</sup>, 17—<br/>
 To Mrs. Saville, England</p>
 <p class="noindent">So strange an accident has happened to us that I cannot forbear
 recording it, although it is very probable that you will see me before
 these papers can come into your possession.</p>
-<p>Last Monday (July 31st) we were nearly surrounded by ice, which closed
+<p>Last Monday (July 31<sup>st</sup>) we were nearly surrounded by ice, which closed
 in the ship on all sides, scarcely leaving her the sea-room in which
 she floated. Our situation was somewhat dangerous, especially as we
 were compassed round by a very thick fog. We accordingly lay to,
@@ -457,7 +457,7 @@ have been happy to have possessed as the brother of my heart.</p>
 <p>I shall continue my journal concerning the stranger at intervals,
 should I have any fresh incidents to record.</p>
 <p class="separation letter_header">
-August 13th, 17—</p>
+August 13<sup>th</sup>, 17—</p>
 <p class="noindent">My affection for my guest increases every day. He excites at once my
 admiration and my pity to an astonishing degree. How can I see so
 noble a creature destroyed by misery without feeling the most poignant
@@ -1845,7 +1845,7 @@ which are to convey to you the horrible tidings.</p>
 my heart, who was so gentle, yet so gay! Victor, he is murdered!</p>
 <p>“I will not attempt to console you; but will simply relate the
 circumstances of the transaction.</p>
-<p>“Last Thursday (May 7th), I, my niece, and your two brothers, went to
+<p>“Last Thursday (May 7<sup>th</sup>), I, my niece, and your two brothers, went to
 walk in Plainpalais. The evening was warm and serene, and we prolonged
 our walk farther than usual. It was already dusk before we thought of
 returning; and then we discovered that William and Ernest, who had gone
@@ -1891,7 +1891,7 @@ with hatred for your enemies.</p>
 “Your affectionate and afflicted father,</p>
 <p class="signature">
 “Alphonse Frankenstein.<br/>
-“Geneva, May 12th, 17—.”</p>
+“Geneva, May 12<sup>th</sup>, 17—.”</p>
 <p class="separation">
 Clerval, who had watched my countenance as I read this letter, was
 surprised to observe the despair that succeeded the joy I at first
@@ -4588,7 +4588,7 @@ Cumberland lakes, resolving to arrive at the completion of this tour
 about the end of July. I packed up my chemical instruments and the
 materials I had collected, resolving to finish my labours in some
 obscure nook in the northern highlands of Scotland.</p>
-<p>We quitted London on the 27th of March and remained a few days at
+<p>We quitted London on the 27<sup>th</sup> of March and remained a few days at
 Windsor, rambling in its beautiful forest. This was a new scene to us
 mountaineers; the majestic oaks, the quantity of game, and the herds of
 stately deer were all novelties to us.</p>
@@ -5489,7 +5489,7 @@ lips when we meet, occasioned by this or any other exertion of mine, I
 shall need no other happiness.</p>
 <p class="signature">
 “Elizabeth Lavenza<br/>
-“Geneva, May 18th, 17—”</p>
+“Geneva, May 18<sup>th</sup>, 17—”</p>
 <p class="signature">
 This letter revived in my memory what I had before forgotten, the
 threat of the fiend—<strong>“I will be with you on your wedding-night!”</strong> Such
@@ -6132,7 +6132,7 @@ steel aright.</p>
 <p class="separation">
 Walton, in continuation.</p>
 <p class="separation">
-August 26th, 17—</p>
+August 26<sup>th</sup>, 17—</p>
 <p>You have read this strange and terrific story, Margaret; and do you not
 feel your blood congeal with horror, like that which even now curdles
 mine? Sometimes, seized with sudden agony, he could not continue his
@@ -6232,7 +6232,7 @@ utility to my fellow creatures, then could I live to fulfil it. But
 such is not my destiny; I must pursue and destroy the being to whom I
 gave existence; then my lot on earth will be fulfilled and I may die.”</p>
 <p class="separation">
-September 2nd<br/>
+September 2<sup>nd</sup><br/>
 My beloved Sister,</p>
 <p>I write to you, encompassed by peril and ignorant whether I am ever
 doomed to see again dear England and the dearer friends that inhabit
@@ -6262,7 +6262,7 @@ resolutions of man. These feelings are transitory; each day of
 expectation delayed fills them with fear, and I almost dread a mutiny
 caused by this despair.</p>
 <p class="separation">
-September 5th</p>
+September 5<sup>th</sup></p>
 <p>A scene has just passed of such uncommon interest that, although it is
 highly probable that these papers may never reach you, yet I cannot
 forbear recording it.</p>
@@ -6331,24 +6331,24 @@ return shamefully, my purpose unfulfilled. Yet I fear such will be my
 fate; the men, unsupported by ideas of glory and honour, can never
 willingly continue to endure their present hardships.</p>
 <p class="separation">
-September 7th</p>
+September 7<sup>th</sup></p>
 <p>The die is cast; I have consented to return if we are not destroyed.
 Thus are my hopes blasted by cowardice and indecision; I come back
 ignorant and disappointed. It requires more philosophy than I possess
 to bear this injustice with patience.</p>
 <p class="separation">
-September 12th</p>
+September 12<sup>th</sup></p>
 <p>It is past; I am returning to England. I have lost my hopes of utility
 and glory; I have lost my friend. But I will endeavour to detail these
 bitter circumstances to you, my dear sister; and while I am wafted
 towards England and towards you, I will not despond.</p>
-<p>September 9th, the ice began to move, and roarings like thunder were
+<p>September 9<sup>th</sup>, the ice began to move, and roarings like thunder were
 heard at a distance as the islands split and cracked in every
 direction. We were in the most imminent peril, but as we could only
 remain passive, my chief attention was occupied by my unfortunate guest
 whose illness increased in such a degree that he was entirely confined
 to his bed. The ice cracked behind us and was driven with force
-towards the north; a breeze sprang from the west, and on the 11th the
+towards the north; a breeze sprang from the west, and on the 11<sup>th</sup> the
 passage towards the south became perfectly free. When the sailors saw
 this and that their return to their native country was apparently
 assured, a shout of tumultuous joy broke from them, loud and
