--- a/Gullivers_Travels.html
+++ b/Gullivers_Travels.html
@@ -301,7 +301,7 @@ East Indies, we were driven by a violent storm to the north-west
 of Van Diemen’s Land. By an observation, we found
 ourselves in the latitude of 30 degrees 2 minutes south.
 Twelve of our crew were dead by immoderate labour and ill food;
-the rest were in a very weak condition. On the 5th of
+the rest were in a very weak condition. On the 5<sup>th</sup> of
 November, which was the beginning of summer in those parts, the
 weather being very hazy, the seamen spied a rock within half a
 cable’s length of the ship; but the wind was so strong,
@@ -1155,7 +1155,7 @@ fruitful as autumn, dreadful as winter: his most sublime majesty
 proposes to the man-mountain, lately arrived at our celestial
 dominions, the following articles, which, by a solemn oath, he
 shall be obliged to perform:—</p>
-<p>“1st, The man-mountain shall not depart from our
+<p>“1<sup>st</sup>, The man-mountain shall not depart from our
 dominions, without our license under our great seal.</p>
 <p>“2d, He shall not presume to come into our metropolis,
 without our express order; at which time, the inhabitants shall
@@ -1163,23 +1163,23 @@ have two hours warning to keep within doors.</p>
 <p>“3d, The said man-mountain shall confine his walks to
 our principal high roads, and not offer to walk, or lie down, in
 a meadow or field of corn.</p>
-<p>“4th, As he walks the said roads, he shall take the
+<p>“4<sup>th</sup>, As he walks the said roads, he shall take the
 utmost care not to trample upon the bodies of any of our loving
 subjects, their horses, or carriages, nor take any of our
 subjects into his hands without their own consent.</p>
-<p>“5th, If an express requires extraordinary despatch, the
+<p>“5<sup>th</sup>, If an express requires extraordinary despatch, the
 man-mountain shall be obliged to carry, in his pocket, the
 messenger and horse a six days journey, once in every moon, and
 return the said messenger back (if so required) safe to our
 imperial presence.</p>
-<p>“6th, He shall be our ally against our enemies in the
+<p>“6<sup>th</sup>, He shall be our ally against our enemies in the
 island of Blefuscu, and do his utmost to destroy their fleet,
 which is now preparing to invade us.</p>
-<p>“7th, That the said man-mountain shall, at his times of
+<p>“7<sup>th</sup>, That the said man-mountain shall, at his times of
 leisure, be aiding and assisting to our workmen, in helping to
 raise certain great stones, towards covering the wall of the
 principal park, and other our royal buildings.</p>
-<p>“8th, That the said man-mountain shall, in two
+<p>“8<sup>th</sup>, That the said man-mountain shall, in two
 moons’ time, deliver in an exact survey of the
 circumference of our dominions, by a computation of his own paces
 round the coast.</p>
@@ -2438,7 +2438,7 @@ gun. It is not easy to express the joy I was in, upon the
 unexpected hope of once more seeing my beloved country, and the
 dear pledges I left in it. The ship slackened her sails,
 and I came up with her between five and six in the evening,
-September 26th; but my heart leaped within me to see her English
+September 26<sup>th</sup>; but my heart leaped within me to see her English
 colours. I put my cows and sheep into my coat-pockets, and
 got on board with all my little cargo of provisions. The
 vessel was an English merchantman, returning from Japan by the
@@ -2461,7 +2461,7 @@ promised, when we arrived in England, to make him a present of a
 cow and a sheep big with young.</p>
 <p>I shall not trouble the reader with a particular account of
 this voyage, which was very prosperous for the most part.
-We arrived in the Downs on the 13th of April, 1702. I had
+We arrived in the Downs on the 13<sup>th</sup> of April, 1702. I had
 only one misfortune, that the rats on board carried away one of
 my sheep; I found her bones in a hole, picked clean from the
 flesh. The rest of my cattle I got safe ashore, and set
@@ -2510,7 +2510,7 @@ reception, with several accidents that happened there. A
 description of the inhabitants.</p>
 <p>Having been condemned, by nature and fortune, to active and
 restless life, in two months after my return, I again left my
-native country, and took shipping in the Downs, on the 20th day
+native country, and took shipping in the Downs, on the 20<sup>th</sup> day
 of June, 1702, in the Adventure, Captain John Nicholas, a Cornish
 man, commander, bound for Surat. We had a very prosperous
 gale, till we arrived at the Cape of Good Hope, where we landed
@@ -2522,11 +2522,11 @@ Madagascar; but having got northward of that island, and to about
 five degrees south latitude, the winds, which in those seas are
 observed to blow a constant equal gale between the north and
 west, from the beginning of December to the beginning of May, on
-the 19th of April began to blow with much greater violence, and
+the 19<sup>th</sup> of April began to blow with much greater violence, and
 more westerly than usual, continuing so for twenty days together:
 during which time, we were driven a little to the east of the
 Molucca Islands, and about three degrees northward of the line,
-as our captain found by an observation he took the 2nd of May, at
+as our captain found by an observation he took the 2<sup>nd</sup> of May, at
 which time the wind ceased, and it was a perfect calm, whereat I
 was not a little rejoiced. But he, being a man well
 experienced in the navigation of those seas, bid us all prepare
@@ -2567,8 +2567,8 @@ water. We thought it best to hold on the same course,
 rather than turn more northerly, which might have brought us to
 the north-west part of Great Tartary, and into the Frozen
 Sea.</p>
-<p>On the 16th day of June, 1703, a boy on the top-mast
-discovered land. On the 17th, we came in full view of a
+<p>On the 16<sup>th</sup> day of June, 1703, a boy on the top-mast
+discovered land. On the 17<sup>th</sup>, we came in full view of a
 great island, or continent (for we knew not whether;) on the
 south side whereof was a small neck of land jutting out into the
 sea, and a creek too shallow to hold a ship of above one hundred
@@ -3096,7 +3096,7 @@ town.</p>
 to carry me to the most considerable cities of the kingdom.
 Having therefore provided himself with all things necessary for a
 long journey, and settled his affairs at home, he took leave of
-his wife, and upon the 17th of August, 1703, about two months
+his wife, and upon the 17<sup>th</sup> of August, 1703, about two months
 after my arrival, we set out for the metropolis, situate near the
 middle of that empire, and about three thousand miles distance
 from our house. My master made his daughter Glumdalclitch
@@ -3121,7 +3121,7 @@ there was hardly a rivulet so small as the Thames at
 London-bridge. We were ten weeks in our journey, and I was
 shown in eighteen large towns, besides many villages, and private
 families.</p>
-<p>On the 26th day of October we arrived at the metropolis,
+<p>On the 26<sup>th</sup> day of October we arrived at the metropolis,
 called in their language <em>Lorbrulgrud</em>, or Pride of the
 Universe. My master took a lodging in the principal street
 of the city, not far from the royal palace, and put out bills in
@@ -5015,8 +5015,8 @@ continuing as violent as ever. The only difficulty that
 remained, was to persuade my wife, whose consent however I at
 last obtained, by the prospect of advantage she proposed to her
 children.</p>
-<p>We set out the 5th day of August, 1706, and arrived at Fort
-St. George the 11th of April, 1707. We staid there three
+<p>We set out the 5<sup>th</sup> day of August, 1706, and arrived at Fort
+St. George the 11<sup>th</sup> of April, 1707. We staid there three
 weeks to refresh our crew, many of whom were sick. From
 thence we went to Tonquin, where the captain resolved to continue
 some time, because many of the goods he intended to buy were not
@@ -5712,7 +5712,7 @@ with his majesty, for leave to depart; which he accordingly did,
 as he was pleased to tell me, with regret: for indeed he had made
 me several offers very advantageous, which, however, I refused,
 with expressions of the highest acknowledgment.</p>
-<p>On the 16th of February I took leave of his majesty and the
+<p>On the 16<sup>th</sup> of February I took leave of his majesty and the
 court. The king made me a present to the value of about two
 hundred pounds English, and my protector, his kinsman, as much
 more, together with a letter of recommendation to a friend of his
@@ -6717,7 +6717,7 @@ gentlemen, and some others, were so generous and kind as to
 furnish me with provisions, and see me on board. I was a
 month in this voyage. We had one violent storm, and were
 under a necessity of steering westward to get into the trade
-wind, which holds for above sixty leagues. On the 21st of
+wind, which holds for above sixty leagues. On the 21<sup>st</sup> of
 April, 1708, we sailed into the river of Clumegnig, which is a
 seaport town, at the south-east point of Luggnagg. We cast
 anchor within a league of the town, and made a signal for a
@@ -7168,7 +7168,7 @@ hand, to the Emperor of Japan. He likewise presented me
 with four hundred and forty-four large pieces of gold (this
 nation delighting in even numbers), and a red diamond, which I
 sold in England for eleven hundred pounds.</p>
-<p>On the 6th of May, 1709, I took a solemn leave of his majesty,
+<p>On the 6<sup>th</sup> of May, 1709, I took a solemn leave of his majesty,
 and all my friends. This prince was so gracious as to order
 a guard to conduct me to Glanguenstald, which is a royal port to
 the south-west part of the island. In six days I found a
@@ -7223,7 +7223,7 @@ interpreter, for so unusual a favour; and some troops being at
 that time on their march to Nangasac, the commanding officer had
 orders to convey me safe thither, with particular instructions
 about the business of the crucifix.</p>
-<p>On the 9th day of June, 1709, I arrived at Nangasac, after a
+<p>On the 9<sup>th</sup> day of June, 1709, I arrived at Nangasac, after a
 very long and troublesome journey. I soon fell into the
 company of some Dutch sailors belonging to the Amboyna, of
 Amsterdam, a stout ship of 450 tons. I had lived long in
@@ -7250,13 +7250,13 @@ a bamboo; after which I was no more troubled with such
 questions.</p>
 <p>Nothing happened worth mentioning in this voyage. We
 sailed with a fair wind to the Cape of Good Hope, where we staid
-only to take in fresh water. On the 10th of April, 1710, we
+only to take in fresh water. On the 10<sup>th</sup> of April, 1710, we
 arrived safe at Amsterdam, having lost only three men by sickness
 in the voyage, and a fourth, who fell from the foremast into the
 sea, not far from the coast of Guinea. From Amsterdam I
 soon after set sail for England, in a small vessel belonging to
 that city.</p>
-<p>On the 16th of April we put in at the Downs. I landed
+<p>On the 16<sup>th</sup> of April we put in at the Downs. I landed
 next morning, and saw once more my native country, after an
 absence of five years and six months complete. I went
 straight to Redriff, where I arrived the same day at two in the
@@ -7281,9 +7281,9 @@ understood navigation well, and being grown weary of a
 surgeon’s employment at sea, which, however, I could
 exercise upon occasion, I took a skilful young man of that
 calling, one Robert Purefoy, into my ship. We set sail from
-Portsmouth upon the 7th day of September, 1710; on the 14th we
+Portsmouth upon the 7<sup>th</sup> day of September, 1710; on the 14<sup>th</sup> we
 met with Captain Pocock, of Bristol, at Teneriffe, who was going
-to the bay of Campechy to cut logwood. On the 16th, he was
+to the bay of Campechy to cut logwood. On the 16<sup>th</sup>, he was
 parted from us by a storm; I heard since my return, that his ship
 foundered, and none escaped but one cabin boy. He was an
 honest man, and a good sailor, but a little too positive in his
@@ -7317,7 +7317,7 @@ confinement. They sailed many weeks, and traded with the
 Indians; but I knew not what course they took, being kept a close
 prisoner in my cabin, and expecting nothing less than to be
 murdered, as they often threatened me.</p>
-<p>Upon the 9th day of May, 1711, one James Welch came down to my
+<p>Upon the 9<sup>th</sup> day of May, 1711, one James Welch came down to my
 cabin, and said, “he had orders from the captain to set me
 ashore.” I expostulated with him, but in vain;
 neither would he so much as tell me who their new captain
@@ -9774,7 +9774,7 @@ altogether impossible to find such a solitary island as I desired
 to live in; but I might command in my own house, and pass my time
 in a manner as recluse as I pleased.”</p>
 <p>I complied at last, finding I could not do better. I
-left Lisbon the 24th day of November, in an English merchantman,
+left Lisbon the 24<sup>th</sup> day of November, in an English merchantman,
 but who was the master I never inquired. Don Pedro
 accompanied me to the ship, and lent me twenty pounds. He
 took kind leave of me, and embraced me at parting, which I bore
