--- a/Moby-Dick.html
+++ b/Moby-Dick.html
@@ -1438,7 +1438,7 @@ think it was trying to crawl up the chimney, as I had seen a little
 sweep do a few days previous; and my stepmother who, somehow or other,
 was all the time whipping me, or sending me to bed supperless,—my
 mother dragged me by the legs out of the chimney and packed me off to
-bed, though it was only two o’clock in the afternoon of the 21st June,
+bed, though it was only two o’clock in the afternoon of the 21<sup>st</sup> June,
 the longest day in the year in our hemisphere. I felt dreadfully. But
 there was no help for it, so up stairs I went to my little room in the
 third floor, undressed myself as slowly as possible so as to kill time,
@@ -1712,11 +1712,11 @@ masoned into the wall on either side the pulpit. Three of them ran
 something like the following, but I do not pretend to quote:—</p>
 <p><strong>Sacred to the Memory of John Talbot</strong>, Who, at the age of eighteen, was
 lost overboard, Near the Isle of Desolation, off Patagonia, November
-1st, 1836. <strong>This tablet</strong> Is erected to his Memory <strong>By his sister</strong>.</p>
+1<sup>st</sup>, 1836. <strong>This tablet</strong> Is erected to his Memory <strong>By his sister</strong>.</p>
 <p><strong>Sacred to the Memory of Robert Long, Willis Ellery, Nathan Coleman,
 Walter Canny, Seth Macy, and Samuel Gleig</strong>, Forming one of the boats’
 crews <strong>of the ship Eliza</strong> who were towed out of sight by a Whale, On the
-Off-shore Ground in the <strong>Pacific</strong>, December 31st, 1839. <strong>This marble</strong> Is
+Off-shore Ground in the <strong>Pacific</strong>, December 31<sup>st</sup>, 1839. <strong>This marble</strong> Is
 here placed by their surviving <strong>Shipmates</strong>.</p>
 <p><strong>Sacred to the Memory of the Late Captain Ezekiel Hardy</strong>, Who in the bows
 of his boat was killed by a Sperm Whale on the coast of Japan, <strong>August</strong>
@@ -3061,9 +3061,9 @@ degree of importance pertaining to the respective duties of the ship’s
 company. I was also aware that being a green hand at whaling, my own
 lay would not be very large; but considering that I was used to the sea,
 could steer a ship, splice a rope, and all that, I made no doubt that
-from all I had heard I should be offered at least the 275th lay—that
-is, the 275th part of the clear net proceeds of the voyage, whatever
-that might eventually amount to. And though the 275th lay was what they
+from all I had heard I should be offered at least the 275<sup>th</sup> lay—that
+is, the 275<sup>th</sup> part of the clear net proceeds of the voyage, whatever
+that might eventually amount to. And though the 275<sup>th</sup> lay was what they
 call a rather <strong>long lay</strong>, yet it was better than nothing; and if we had a
 lucky voyage, might pretty nearly pay for the clothing I would wear out
 on it, not to speak of my three years’ beef and board, for which I would
@@ -3072,9 +3072,9 @@ not have to pay one stiver.</p>
 fortune—and so it was, a very poor way indeed. But I am one of those
 that never take on about princely fortunes, and am quite content if the
 world is ready to board and lodge me, while I am putting up at this grim
-sign of the Thunder Cloud. Upon the whole, I thought that the 275th lay
+sign of the Thunder Cloud. Upon the whole, I thought that the 275<sup>th</sup> lay
 would be about the fair thing, but would not have been surprised had I
-been offered the 200th, considering I was of a broad-shouldered make.</p>
+been offered the 200<sup>th</sup>, considering I was of a broad-shouldered make.</p>
 <p>But one thing, nevertheless, that made me a little distrustful about
 receiving a generous share of the profits was this: Ashore, I had heard
 something of both Captain Peleg and his unaccountable old crony Bildad;
@@ -7008,7 +7008,7 @@ invariability to those of the herring-shoals or the flights of swallows.
 On this hint, attempts have been made to construct elaborate migratory
 charts of the sperm whale.<span class="footnote"><span class="footnote-body">Since the above was written, the statement is happily borne
 out by an official circular, issued by Lieutenant Maury, of
-the National Observatory, Washington, April 16th, 1851. By
+the National Observatory, Washington, April 16<sup>th</sup>, 1851. By
 that circular, it appears that precisely such a chart is in
 course of completion; and portions of it are presented in
 the circular. “This chart divides the ocean into districts
@@ -9215,7 +9215,7 @@ imitated, I take it, from the like figures on antique vases.
 Though universally denominated a dolphin, I nevertheless call this
 book-binder’s fish an attempt at a whale; because it was so intended
 when the device was first introduced. It was introduced by an old
-Italian publisher somewhere about the 15th century, during the Revival
+Italian publisher somewhere about the 15<sup>th</sup> century, during the Revival
 of Learning; and in those days, and even down to a comparatively
 late period, dolphins were popularly supposed to be a species of the
 Leviathan.</p>
@@ -14268,7 +14268,7 @@ as Yojo, the ebony idol of Queequeg. And an idol, indeed, it is; or,
 rather, in old times, its likeness was. Such an idol as that found in
 the secret groves of Queen Maachah in Judea; and for worshipping which,
 King Asa, her son, did depose her, and destroyed the idol, and burnt it
-for an abomination at the brook Kedron, as darkly set forth in the 15th
+for an abomination at the brook Kedron, as darkly set forth in the 15<sup>th</sup>
 chapter of the First Book of Kings.</p>
 <p>Look at the sailor, called the mincer, who now comes along, and assisted
 by two allies, heavily backs the grandissimus, as the mariners call it,
