--- a/New_Arabian_Nights.html
+++ b/New_Arabian_Nights.html
@@ -889,7 +889,7 @@
 <p>“You cannot picture my uneasiness as to these conditions,” he said.</p>
 <p>“They are two,” replied the lawyer, “only two; and the sum, as you will remember, is five hundred a-year—and unburdened, I forgot to add, unburdened.”</p>
 <p>And the lawyer raised his eyebrows at him with solemn gusto.</p>
-<p>“The first,” he resumed, “is of remarkable simplicity. You must be in Paris by the afternoon of Sunday, the 15th; there you will find, at the box-office of the Comedie Francaise, a ticket for admission taken in your name and waiting you. You are requested to sit out the whole performance in the seat provided, and that is all.”</p>
+<p>“The first,” he resumed, “is of remarkable simplicity. You must be in Paris by the afternoon of Sunday, the 15<sup>th</sup>; there you will find, at the box-office of the Comedie Francaise, a ticket for admission taken in your name and waiting you. You are requested to sit out the whole performance in the seat provided, and that is all.”</p>
 <p>“I should certainly have preferred a week-day,” replied Francis. “But, after all, once in a way—”</p>
 <p>“And in Paris, my dear sir,” added the lawyer soothingly. “I believe I am something of a precisian myself, but upon such a consideration, and in Paris, I should not hesitate an instant.”</p>
 <p>And the pair laughed pleasantly together.</p>
