--- a/Robinson_Crusoe.html
+++ b/Robinson_Crusoe.html
@@ -234,7 +234,7 @@ mother any more, nor so much as sent them word of it; but leaving
 them to hear of it as they might, without asking God’s
 blessing or my father’s, without any consideration of
 circumstances or consequences, and in an ill hour, God knows, on
-the 1st of September 1651, I went on board a ship bound for
+the 1<sup>st</sup> of September 1651, I went on board a ship bound for
 London. Never any young adventurer’s misfortunes, I
 believe, began sooner, or continued longer than mine. The
 ship was no sooner out of the Humber than the wind began to blow
@@ -1402,7 +1402,7 @@ misfortunes to myself.</p>
 fancy rather than my reason; and, accordingly, the ship being
 fitted out, and the cargo furnished, and all things done, as by
 agreement, by my partners in the voyage, I went on board in an
-evil hour, the 1st September 1659, being the same day eight years
+evil hour, the 1<sup>st</sup> September 1659, being the same day eight years
 that I went from my father and mother at Hull, in order to act
 the rebel to their authority, and the fool to my own
 interests.</p>
@@ -1768,8 +1768,8 @@ got to my raft with the arms. And now I thought myself
 pretty well freighted, and began to think how I should get to
 shore with them, having neither sail, oar, nor rudder; and the
 least capful of wind would have overset all my navigation.</p>
-<p>I had three encouragements—1st, a smooth, calm sea;
-2ndly, the tide rising, and setting in to the shore; 3rdly, what
+<p>I had three encouragements—1<sup>st</sup>, a smooth, calm sea;
+2<sup>nd</sup>ly, the tide rising, and setting in to the shore; 3<sup>rd</sup>ly, what
 little wind there was blew me towards the land. And thus,
 having found two or three broken oars belonging to the
 boat—and, besides the tools which were in the chest, I
@@ -2031,9 +2031,9 @@ believed it would not be wholesome, and more particularly because
 there was no fresh water near it; so I resolved to find a more
 healthy and more convenient spot of ground.</p>
 <p>I consulted several things in my situation, which I found
-would he proper for me: 1st, health and fresh water, I just now
-mentioned; 2ndly, shelter from the heat of the sun; 3rdly,
-security from ravenous creatures, whether man or beast; 4thly, a
+would he proper for me: 1<sup>st</sup>, health and fresh water, I just now
+mentioned; 2<sup>nd</sup>ly, shelter from the heat of the sun; 3<sup>rd</sup>ly,
+security from ravenous creatures, whether man or beast; 4<sup>th</sup>ly, a
 view to the sea, that if God sent any ship in sight, I might not
 lose any advantage for my deliverance, of which I was not willing
 to banish all my expectation yet.</p>
@@ -2219,7 +2219,7 @@ now.</p>
 <p>And now being about to enter into a melancholy relation of a
 scene of silent life, such, perhaps, as was never heard of in the
 world before, I shall take it from its beginning, and continue it
-in its order. It was by my account the 30th of September,
+in its order. It was by my account the 30<sup>th</sup> of September,
 when, in the manner as above said, I first set foot upon this
 horrid island; when the sun, being to us in its autumnal equinox,
 was almost over my head; for I reckoned myself, by observation,
@@ -2231,7 +2231,7 @@ books, and pen and ink, and should even forget the Sabbath days;
 but to prevent this, I cut with my knife upon a large post, in
 capital letters—and making it into a great cross, I set it
 up on the shore where I first landed—“I came on shore
-here on the 30th September 1659.”</p>
+here on the 30<sup>th</sup> September 1659.”</p>
 <p>Upon the sides of this square post I cut every day a notch
 with my knife, and every seventh notch was as long again as the
 rest, and every first day of the month as long again as that long
@@ -2479,7 +2479,7 @@ on these things; but at length, seeing the ship almost dry, I
 went upon the sand as near as I could, and then swam on
 board. This day also it continued raining, though with no
 wind at all.</p>
-<p><em>From the 1st of October to the 24th</em>.—All these
+<p><em>From the 1<sup>st</sup> of October to the 24<sup>th</sup></em>.—All these
 days entirely spent in many several voyages to get all I could
 out of the ship, which I brought on shore every tide of flood
 upon rafts. Much rain also in the days, though with some
@@ -2503,10 +2503,10 @@ under a rock, and marked out a semicircle for my encampment;
 which I resolved to strengthen with a work, wall, or
 fortification, made of double piles, lined within with cables,
 and without with turf.</p>
-<p>From the 26th to the 30th I worked very hard in carrying all
+<p>From the 26<sup>th</sup> to the 30<sup>th</sup> I worked very hard in carrying all
 my goods to my new habitation, though some part of the time it
 rained exceedingly hard.</p>
-<p>The 31st, in the morning, I went out into the island with my
+<p>The 31<sup>st</sup>, in the morning, I went out into the island with my
 gun, to seek for some food, and discover the country; when I
 killed a she-goat, and her kid followed me home, which I
 afterwards killed also, because it would not feed.</p>
@@ -2543,8 +2543,8 @@ the sea, and escaped me for that time.</p>
 my table again, and finished it, though not to my liking; nor was
 it long before I learned to mend it.</p>
 <p><em>Nov.</em> 7.—Now it began to be settled fair
-weather. The 7th, 8th, 9th, 10th, and part of the 12th (for
-the 11th was Sunday) I took wholly up to make me a chair, and
+weather. The 7<sup>th</sup>, 8<sup>th</sup>, 9<sup>th</sup>, 10<sup>th</sup>, and part of the 12<sup>th</sup> (for
+the 11<sup>th</sup> was Sunday) I took wholly up to make me a chair, and
 with much ado brought it to a tolerable shape, but never to
 please me; and even in the making I pulled it in pieces several
 times.</p>
@@ -2634,7 +2634,7 @@ top, with two pieces of boards across over each post; this I
 finished the next day; and setting more posts up with boards, in
 about a week more I had the roof secured, and the posts, standing
 in rows, served me for partitions to part off the house.</p>
-<p><em>Dec.</em> 17.—From this day to the 20th I placed
+<p><em>Dec.</em> 17.—From this day to the 20<sup>th</sup> I placed
 shelves, and knocked up nails on the posts, to hang everything up
 that could be hung up; and now I began to be in some order within
 doors.</p>
@@ -2676,8 +2676,8 @@ still jealous of my being attacked by somebody, I resolved to
 make very thick and strong.</p>
 <p><em>N.B.</em>—This wall being described before, I
 purposely omit what was said in the journal; it is sufficient to
-observe, that I was no less time than from the 2nd of January to
-the 14th of April working, finishing, and perfecting this wall,
+observe, that I was no less time than from the 2<sup>nd</sup> of January to
+the 14<sup>th</sup> of April working, finishing, and perfecting this wall,
 though it was no more than about twenty-four yards in length,
 being a half-circle from one place in the rock to another place,
 about eight yards from it, the door of the cave being in the
@@ -2798,7 +2798,7 @@ rather food; for I found ways to cook it without baking, though I
 did that also after some time.</p>
 <p>But to return to my Journal.</p>
 <p>I worked excessive hard these three or four months to get my
-wall done; and the 14th of April I closed it up, contriving to go
+wall done; and the 14<sup>th</sup> of April I closed it up, contriving to go
 into it, not by a door but over the wall, by a ladder, that there
 might be no sign on the outside of my habitation.</p>
 <p><em>April</em> 16.—I finished the ladder; so I went up the
@@ -2886,7 +2886,7 @@ should certainly one time or other be buried alive.</p>
 place where it stood, which was just under the hanging precipice
 of the hill; and which, if it should be shaken again, would
 certainly fall upon my tent; and I spent the two next days, being
-the 19th and 20th of April, in contriving where and how to remove
+the 19<sup>th</sup> and 20<sup>th</sup> of April, in contriving where and how to remove
 my habitation. The fear of being swallowed up alive made me
 that I never slept in quiet; and yet the apprehension of lying
 abroad without any fence was almost equal to it; but still, when
@@ -2901,7 +2901,7 @@ and resolved that I would go to work with all speed to build me a
 wall with piles and cables, &amp;c., in a circle, as before, and
 set my tent up in it when it was finished; but that I would
 venture to stay where I was till it was finished, and fit to
-remove. This was the 21st.</p>
+remove. This was the 21<sup>st</sup>.</p>
 <p><em>April</em> 22.—The next morning I begin to consider of
 means to put this resolve into execution; but I was at a great
 loss about my tools. I had three large axes, and abundance
@@ -3021,7 +3021,7 @@ and two of the seamen’s chests; but the wind blowing from
 the shore, nothing came to land that day but pieces of timber,
 and a hogshead, which had some Brazil pork in it; but the salt
 water and the sand had spoiled it. I continued this work
-every day to the 15th of June, except the time necessary to get
+every day to the 15<sup>th</sup> of June, except the time necessary to get
 food, which I always appointed, during this part of my
 employment, to be when the tide was up, that I might be ready
 when it was ebbed out; and by this time I had got timber and
@@ -3347,8 +3347,8 @@ exceedingly refreshed, and my spirits lively and cheerful; when I
 got up I was stronger than I was the day before, and my stomach
 better, for I was hungry; and, in short, I had no fit the next
 day, but continued much altered for the better. This was
-the 29th.</p>
-<p>The 30th was my well day, of course, and I went abroad with my
+the 29<sup>th</sup>.</p>
+<p>The 30<sup>th</sup> was my well day, of course, and I went abroad with my
 gun, but did not care to travel too far. I killed a
 sea-fowl or two, something like a brandgoose, and brought them
 home, but was not very forward to eat them; so I ate some more of
@@ -3430,7 +3430,7 @@ comfort within, which till now I knew nothing of; also, my health
 and strength returned, I bestirred myself to furnish myself with
 everything that I wanted, and make my way of living as regular as
 I could.</p>
-<p>From the 4th of July to the 14th I was chiefly employed in
+<p>From the 4<sup>th</sup> of July to the 14<sup>th</sup> I was chiefly employed in
 walking about with my gun in my hand, a little and a little at a
 time, as a man that was gathering up his strength after a fit of
 sickness; for it is hardly to be imagined how low I was, and to
@@ -3457,7 +3457,7 @@ had ever set foot upon that place. Having now secured my
 habitation, as I thought, fully to my mind, I had a great desire
 to make a more perfect discovery of the island, and to see what
 other productions I might find, which I yet knew nothing of.</p>
-<p>It was on the 15th of July that I began to take a more
+<p>It was on the 15<sup>th</sup> of July that I began to take a more
 particular survey of the island itself. I went up the creek
 first, where, as I hinted, I brought my rafts on shore. I
 found after I came about two miles up, that the tide did not flow
@@ -3593,7 +3593,7 @@ with a piece of a sail, and spread it very well, yet I had not
 the shelter of a hill to keep me from storms, nor a cave behind
 me to retreat into when the rains were extraordinary.</p>
 <p>About the beginning of August, as I said, I had finished my
-bower, and began to enjoy myself. The 3rd of August, I
+bower, and began to enjoy myself. The 3<sup>rd</sup> of August, I
 found the grapes I had hung up perfectly dried, and, indeed, were
 excellent good raisins of the sun; so I began to take them down
 from the trees, and it was very happy that I did so, for the
@@ -3601,7 +3601,7 @@ rains which followed would have spoiled them, and I had lost the
 best part of my winter food; for I had above two hundred large
 bunches of them. No sooner had I taken them all down, and
 carried the most of them home to my cave, than it began to rain;
-and from hence, which was the 14th of August, it rained, more or
+and from hence, which was the 14<sup>th</sup> of August, it rained, more or
 less, every day till the middle of October; and sometimes so
 violently, that I could not stir out of my cave for several
 days.</p>
@@ -3618,11 +3618,11 @@ females, I thought it very strange. But from these three
 cats I afterwards came to be so pestered with cats that I was
 forced to kill them like vermin or wild beasts, and to drive them
 from my house as much as possible.</p>
-<p>From the 14th of August to the 26th, incessant rain, so that I
+<p>From the 14<sup>th</sup> of August to the 26<sup>th</sup>, incessant rain, so that I
 could not stir, and was now very careful not to be much
 wet. In this confinement, I began to be straitened for
 food: but venturing out twice, I one day killed a goat; and the
-last day, which was the 26th, found a very large tortoise, which
+last day, which was the 26<sup>th</sup>, found a very large tortoise, which
 was a treat to me, and my food was regulated thus: I ate a bunch
 of raisins for my breakfast; a piece of the goat’s flesh,
 or of the turtle, for my dinner, broiled—for, to my great
@@ -3931,7 +3931,7 @@ so loving, so gentle, and so fond, that it became from that time
 one of my domestics also, and would never leave me
 afterwards.</p>
 <p>The rainy season of the autumnal equinox was now come, and I
-kept the 30th of September in the same solemn manner as before,
+kept the 30<sup>th</sup> of September in the same solemn manner as before,
 being the anniversary of my landing on the island, having now
 been there two years, and no more prospect of being delivered
 than the first day I came there, I spent the whole day in humble
@@ -4662,7 +4662,7 @@ sea, the same day afterwards I was taken by the Sallee
 man-of-war, and made a slave; the same day of the year that I
 escaped out of the wreck of that ship in Yarmouth Roads, that
 same day-year afterwards I made my escape from Sallee in a boat;
-the same day of the year I was born on—viz. the 30th of
+the same day of the year I was born on—viz. the 30<sup>th</sup> of
 September, that same day I had my life so miraculously saved
 twenty-six years after, when I was cast on shore in this island;
 so that my wicked life and my solitary life began both on a
@@ -4813,7 +4813,7 @@ killing more, and two large watch-coats, of those which, as I
 mentioned before, I had saved out of the seamen’s chests;
 these I took, one to lie upon, and the other to cover me in the
 night.</p>
-<p>It was the 6th of November, in the sixth year of my
+<p>It was the 6<sup>th</sup> of November, in the sixth year of my
 reign—or my captivity, which you please—that I set
 out on this voyage, and I found it much longer than I expected;
 for though the island itself was not very large, yet when I came
@@ -9659,12 +9659,12 @@ mentioned, which had lain by me so long useless that it was grown
 rusty or tarnished, and could hardly pass for silver till it had
 been a little rubbed and handled, as also the money I found in
 the wreck of the Spanish ship. And thus I left the island,
-the 19th of December, as I found by the ship’s account, in
+the 19<sup>th</sup> of December, as I found by the ship’s account, in
 the year 1686, after I had been upon it eight-and-twenty years,
 two months, and nineteen days; being delivered from this second
 captivity the same day of the month that I first made my escape
 in the long-boat from among the Moors of Sallee. In this
-vessel, after a long voyage, I arrived in England the 11th of
+vessel, after a long voyage, I arrived in England the 11<sup>th</sup> of
 June, in the year 1687, having been thirty-five years absent.</p>
 <p>When I came to England I was as perfect a stranger to all the
 world as if I had never been known there. My benefactor and
@@ -10104,7 +10104,7 @@ also twelve other gentlemen with their servants, some French,
 some Spanish, who, as I said, had attempted to go, and were
 obliged to come back again.</p>
 <p>Accordingly, we set out from Pampeluna with our guide on the
-15th of November; and indeed I was surprised when, instead of
+15<sup>th</sup> of November; and indeed I was surprised when, instead of
 going forward, he came directly back with us on the same road
 that we came from Madrid, about twenty miles; when, having passed
 two rivers, and come into the plain country, we found ourselves
@@ -10507,7 +10507,7 @@ was sure to meet with a storm once a-week.</p>
 through France—nothing but what other travellers have given
 an account of with much more advantage than I can. I
 travelled from Toulouse to Paris, and without any considerable
-stay came to Calais, and landed safe at Dover the 14th of
+stay came to Calais, and landed safe at Dover the 14<sup>th</sup> of
 January, after having had a severe cold season to travel in.</p>
 <p>I was now come to the centre of my travels, and had in a
 little time all my new-discovered estate safe about me, the bills
