--- a/The_Adventures_of_Sherlock_Holmes.html
+++ b/The_Adventures_of_Sherlock_Holmes.html
@@ -2565,7 +2565,7 @@ neighbourhood. McCarthy kept two servants—a man and a girl.
 Turner had a considerable household, some half-dozen at the
 least. That is as much as I have been able to gather about the
 families. Now for the facts.</p>
-<p>“On June 3rd, that is, on Monday last, McCarthy left his house at
+<p>“On June 3<sup>rd</sup>, that is, on Monday last, McCarthy left his house at
 Hatherley about three in the afternoon and walked down to the
 Boscombe Pool, which is a small lake formed by the spreading out
 of the stream which runs down the Boscombe Valley. He had been
@@ -2705,7 +2705,7 @@ way:</p>
 <p>“Mr. James McCarthy, the only son of the deceased, was then called
 and gave evidence as follows: ‘I had been away from home for
 three days at Bristol, and had only just returned upon the
-morning of last Monday, the 3rd. My father was absent from home at
+morning of last Monday, the 3<sup>rd</sup>. My father was absent from home at
 the time of my arrival, and I was informed by the maid that he
 had driven over to Ross with John Cobb, the groom. Shortly after
 my return I heard the wheels of his trap in the yard, and,
@@ -3641,7 +3641,7 @@ one of the most remarkable to which I have ever listened. Let me
 have the date of the reception by your uncle of the letter, and
 the date of his supposed suicide.”</p>
 <p>“The letter arrived on March 10, 1883. His death was seven weeks
-later, upon the night of May 2nd.”</p>
+later, upon the night of May 2<sup>nd</sup>.”</p>
 <p>“Thank you. Pray proceed.”</p>
 <p>“When my father took over the Horsham property, he, at my
 request, made a careful examination of the attic, which had been
@@ -3783,12 +3783,12 @@ undoubtedly my uncle’s.”</p>
 which showed by its ragged edge that it had indeed been torn from
 a book. It was headed, “March, 1869,” and beneath were the
 following enigmatical notices:</p>
-<p>“4th. Hudson came. Same old platform.</p>
-<pre>“7th. Set the pips on McCauley, Paramore, and
+<p>“4<sup>th</sup>. Hudson came. Same old platform.</p>
+<pre>“7<sup>th</sup>. Set the pips on McCauley, Paramore, and
         John Swain, of St. Augustine.</pre>
-<p>“9th. McCauley cleared.</p>
-<p>“10th. John Swain cleared.</p>
-<p>“12th. Visited Paramore. All well.”</p>
+<p>“9<sup>th</sup>. McCauley cleared.</p>
+<p>“10<sup>th</sup>. John Swain cleared.</p>
+<p>“12<sup>th</sup>. Visited Paramore. All well.”</p>
 <p>“Thank you!” said Holmes, folding up the paper and returning it
 to our visitor. “And now you must on no account lose another
 instant. We cannot spare time even to discuss what you have told
@@ -4226,7 +4226,7 @@ reaction, with every nerve in a twitter. “I say, Watson, what
 o’clock is it?”</p>
 <p>“Nearly eleven.”</p>
 <p>“Of what day?”</p>
-<p>“Of Friday, June 19th.”</p>
+<p>“Of Friday, June 19<sup>th</sup>.”</p>
 <p>“Good heavens! I thought it was Wednesday. It is Wednesday. What
 d’you want to frighten a chap for?” He sank his face onto his
 arms and began to sob in a high treble key.</p>
@@ -5234,7 +5234,7 @@ the Countess to part with half her fortune if she could but
 recover the gem.”</p>
 <p>“It was lost, if I remember aright, at the Hotel Cosmopolitan,” I
 remarked.</p>
-<p>“Precisely so, on December 22nd, just five days ago. John Horner,
+<p>“Precisely so, on December 22<sup>nd</sup>, just five days ago. John Horner,
 a plumber, was accused of having abstracted it from the lady’s
 jewel-case. The evidence against him was so strong that the case
 has been referred to the Assizes. I have some account of the
@@ -5242,7 +5242,7 @@ matter here, I believe.” He rummaged amid his newspapers,
 glancing over the dates, until at last he smoothed one out,
 doubled it over, and read the following paragraph:</p>
 <p>“Hotel Cosmopolitan Jewel Robbery. John Horner, 26, plumber, was
-brought up upon the charge of having upon the 22nd inst.,
+brought up upon the charge of having upon the 22<sup>nd</sup> inst.,
 abstracted from the jewel-case of the Countess of Morcar the
 valuable gem known as the blue carbuncle. James Ryder,
 upper-attendant at the hotel, gave his evidence to the effect
@@ -5515,7 +5515,7 @@ read it out to me.”</p>
 <p>Holmes turned to the page indicated. “Here you are, ‘Mrs.
 Oakshott, 117, Brixton Road, egg and poultry supplier.’ ”</p>
 <p>“Now, then, what’s the last entry?”</p>
-<p>“ ‘December 22nd. Twenty-four geese at 7<em>s</em>. 6<em>d</em>.’ ”</p>
+<p>“ ‘December 22<sup>nd</sup>. Twenty-four geese at 7<em>s</em>. 6<em>d</em>.’ ”</p>
 <p>“Quite so. There you are. And underneath?”</p>
 <p>“ ‘Sold to Mr. Windigate of the Alpha, at 12<em>s</em>.’ ”</p>
 <p>“What have you to say now?”</p>
@@ -6786,7 +6786,7 @@ might find a doctor, a worthy fellow very kindly escorted me
 here. I gave the maid a card, but I see that she has left it upon
 the side-table.”</p>
 <p>I took it up and glanced at it. “Mr. Victor Hatherley, hydraulic
-engineer, 16A, Victoria Street (3rd floor).” That was the name,
+engineer, 16A, Victoria Street (3<sup>rd</sup> floor).” That was the name,
 style, and abode of my morning visitor. “I regret that I have
 kept you waiting,” said I, sitting down in my library-chair. “You
 are fresh from a night journey, I understand, which is in itself
@@ -7369,7 +7369,7 @@ from the shelf one of the ponderous commonplace books in which he
 placed his cuttings.</p>
 <p>“Here is an advertisement which will interest you,” said he. “It
 appeared in all the papers about a year ago. Listen to this:
-‘Lost, on the 9th inst., Mr. Jeremiah Hayling, aged
+‘Lost, on the 9<sup>th</sup> inst., Mr. Jeremiah Hayling, aged
 twenty-six, a hydraulic engineer. Left his lodgings at ten
 o’clock at night, and has not been heard of since. Was
 dressed in,’ <abbr title="et cetera" xml:lang="la" lang="la">etc.</abbr>, <abbr title="et cetera" xml:lang="la" lang="la">etc.</abbr> Ha! That represents the last time that
@@ -8039,7 +8039,7 @@ over here.”</p>
 <p>“And over here is what appears to be the fragment of a hotel
 bill, which interests me deeply.”</p>
 <p>“There’s nothing in it. I looked at it before,” said Lestrade.
-“ ‘Oct. 4th, rooms 8<em>s</em>., breakfast 2<em>s</em>. 6<em>d</em>., cocktail 1<em>s</em>., lunch 2<em>s</em>.
+“ ‘Oct. 4<sup>th</sup>, rooms 8<em>s</em>., breakfast 2<em>s</em>. 6<em>d</em>., cocktail 1<em>s</em>., lunch 2<em>s</em>.
 6<em>d</em>., glass sherry, 8<em>d</em>.’ I see nothing in that.”</p>
 <p>“Very likely not. It is most important, all the same. As to the
 note, it is important also, or at least the initials are, so I
