--- a/The_Jungle_Book.html
+++ b/The_Jungle_Book.html
@@ -4065,9 +4065,9 @@ over a little, there.”</p>
 these camels too sickening for anything? I walked out of my lines to get
 a little peace and quiet here.”</p>
 <p>“My lords,” said the camel humbly, “we dreamed bad dreams in the night,
-and we were very much afraid. I am only a baggage camel of the 39th
+and we were very much afraid. I am only a baggage camel of the 39<sup>th</sup>
 Native Infantry, and I am not as brave as you are, my lords.”</p>
-<p>“Then why didn’t you stay and carry baggage for the 39th Native
+<p>“Then why didn’t you stay and carry baggage for the 39<sup>th</sup> Native
 Infantry, instead of running all round the camp?” said the mule.</p>
 <p>“They were such very bad dreams,” said the camel. “I am sorry. Listen!
 What is that? Shall we run on again?”</p>
