--- a/Treasure_Island.html
+++ b/Treasure_Island.html
@@ -1127,7 +1127,7 @@ A knife in his back as like as not.</p>
 <p>The next ten or twelve pages were filled with a curious series of
 entries. There was a date at one end of the line and at the other a
 sum of money, as in common account-books, but instead of explanatory
-writing, only a varying number of crosses between the two. On the 12th
+writing, only a varying number of crosses between the two. On the 12<sup>th</sup>
 of June, 1745, for instance, a sum of seventy pounds had plainly become
 due to someone, and there was nothing but six crosses to explain the
 cause. In a few cases, to be sure, the name of a place would be added,
